# rules_ts

./: MODULE.bazel  WORKSPACE  internal_deps.bzl
.aspect/workflows/: config.yaml
.github/workflows/: ci.yaml
docs/: BUILD.bazel  rules.md  transpiler.md
e2e/external_dep/: BUILD
examples/: BUILD  package.json  pnpm-lock.json  pnpm-lock.yaml  tsconfig-base.json
examples/a/: BUILD.bazel  a.ts  tsconfig-extended.json  tsconfig.json
examples/allow_js/: BUILD.bazel  b.jsx  verify.js
examples/b/: BUILD.bazel  b.spec.ts  b.ts  tsconfig.json
examples/c/: BUILD.bazel  c.ts  tsconfig.json
examples/data/: BUILD.bazel  data.spec.ts
examples/declaration_only/: BUILD.bazel
examples/declarationdir/: BUILD.bazel  verify.js
examples/declarationdir_with_value/: BUILD.bazel  verify.js
examples/directory_declarations/: BUILD.bazel
examples/empty_intermediate/: BUILD.bazel  tsconfig-a.json  tsconfig-b.json  tsconfig-c.json
examples/esm/: node_modules
examples/extends_chain/: BUILD.bazel  tsconfig.node.json
examples/extends_chain/main/: BUILD.bazel
examples/filegroup/: BUILD.bazel  c.ts
examples/generated_tsconfig/config/: BUILD.bazel  expected.d.ts.map_  expected.js.map_
examples/generated_tsconfig/config_attrs/: BUILD.bazel  expected.d.ts.map_  expected.js.map_
examples/generated_tsconfig/decl_only/: BUILD.bazel
examples/generated_tsconfig/default/: BUILD.bazel  a.ts
examples/generated_tsconfig/extends/: BUILD.bazel  tsconfig-extended.json
examples/generated_tsconfig/gen_src/: BUILD.bazel
examples/import_package_by_name/app/: BUILD.bazel  app.ts
examples/import_package_by_name/lib/: BUILD.bazel
examples/isolated_typecheck/: BUILD.bazel
examples/isolated_typecheck/core/: index.ts
examples/isolated_typecheck/frontend/: BUILD.bazel  index.ts
examples/js_library/: BUILD.bazel  a.js  b.ts  tsconfig.json
examples/json/: BUILD.bazel  verify.js
examples/json/subdir/: a.ts
examples/json_data/: BUILD.bazel
examples/jsx/: BUILD.bazel  verify-preserve.js
examples/ngc/: BUILD.bazel  component.ts  tsconfig.json
examples/outdir/: BUILD.bazel  a.golden.cjs  a.golden.js
examples/output_group/: BUILD.bazel
examples/rootdir/: BUILD.bazel
examples/rootdir_with_value/: BUILD.bazel  verify.js
examples/rootdir_with_value/subdir/: a.ts
examples/simple/: BUILD.bazel  index.golden.js
examples/swc/: BUILD.bazel
examples/transpiler/: BUILD.bazel  babel.bzl
examples/ts_config/: BUILD.bazel  tsconfig-extended.json  tsconfig.json
examples/tsbuildinfofile/: BUILD.bazel
examples/validation/: BUILD.bazel  a.ts  tsconfig.json
examples/worker/: BUILD.bazel  big.ts  second.ts
ts/: defs.bzl  repositories.bzl
ts/private/: BUILD.bazel  ts_config.bzl  ts_proto_library.bzl  ts_typecheck_aspect.bzl
ts/test/: mock_transpiler.bzl
