load("@aspect_rules_js//js:js_test.bzl", "js_test")
load("//ts:defs.bzl", "ts_project")

# Ensure that subdir/a.ts produces outDir/a.js and declarationDir/a.d.ts
SRCS = [
    "subdir/a.ts",
]

ts_project(
    name = "transpile",
    srcs = SRCS,
    declaration = True,
    declaration_dir = "out/types",
    declaration_map = True,
    out_dir = "out/code",
    root_dir = "subdir",
    source_map = True,
)

filegroup(
    name = "types",
    srcs = [":transpile"],
    output_group = "types",
)

js_test(
    name = "test",
    data = [
        ":transpile",
        ":types",
    ],
    entry_point = "verify.js",
    templated_args = [
        "$(locations :types)",
        "$(locations :transpile)",
    ],
)
