load("@aspect_rules_js//js:js_test.bzl", "js_test")
load("//ts:defs.bzl", "ts_project")

# Ensure that jsx inputs result in jsx outputs with preserve_jsx = True
SRCS = [
    "a.tsx",
    "b.jsx",
]

ts_project(
    name = "transpile",
    srcs = SRCS,
    allow_js = True,
    declaration = True,
    declaration_map = True,
    out_dir = "out",
    preserve_jsx = True,
    source_map = True,
)

filegroup(
    name = "types",
    srcs = [":transpile"],
    output_group = "types",
)

js_test(
    name = "test",
    data = [
        ":transpile",
        ":types",
    ],
    entry_point = "verify-preserve.js",
    templated_args = [
        "$(locations :types)",
        "$(locations :transpile)",
    ],
)
