load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//ts:defs.bzl", "ts_project")

# This uses defaults for all attributes.
# It will find `index.ts` and produce `index.js` & `index.d.ts`
ts_project(
    name = "transpile",
    srcs = ["index.ts"],
    declaration = True,
)

filegroup(
    name = "types",
    srcs = [":transpile"],
    output_group = "types",
)

write_source_files(
    name = "test",
    src = "index.golden.d.ts",
    # Refers to the output from filegroup above
    generated = ":types",
)
