load("@aspect_rules_js//js:js_test.bzl", "js_test")
load("//ts:defs.bzl", "ts_project")

# Ensure that subdir/a.ts produces outDir/a.js
SRCS = [
    "subdir/a.ts",
    "subdir/file.json",
]

ts_project(
    name = "transpile",
    srcs = SRCS,
    args = ["--listEmittedFiles"],
    resolve_json_module = True,
    root_dir = "subdir",
)

js_test(
    name = "test",
    data = [":transpile"],
    entry_point = "verify.js",
    templated_args = ["$(locations :transpile)"],
)
