load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//ts:defs.bzl", "ts_project")

# This uses defaults for all attributes.
# It will find `index.ts` and produce `index.js`
ts_project(
    name = "compile",
)

write_source_files(
    name = "test",
    files = {
        "index.golden.js":
        # Refers to the output from ts_project above
        "index.js",
    },
)
