"""
Test a tree of tsconfig.json files
"""

load("//ts:defs.bzl", "ts_config", "ts_project")

ts_config(
    name = "tsconfig",
    src = "tsconfig.json",
    deps = [
        "tsconfig-extended.json",
        "//:tsconfig",
    ],
)

ts_project(
    name = "compile_ts",
    composite = True,
    declaration = True,
    tsconfig = ":tsconfig",
)
