load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("//ts:defs.bzl", "ts_config", "ts_project")

# Case one: extend from a single tsconfig
ts_project(
    name = "case_one",
    extends = "//:tsconfig-base.json",
    tsconfig = {
        "compilerOptions": {
            "declaration": True,
            "outDir": "case_one",
        },
    },
)

ts_config(
    name = "tsconfig_chain",
    src = "tsconfig-extended.json",
    deps = [
        "//:tsconfig",
    ],
)

# Case two: extend from a chain of tsconfig
ts_project(
    name = "case_two",
    extends = ":tsconfig_chain",
    tsconfig = {
        "compilerOptions": {
            "declaration": True,
            "outDir": "case_two",
        },
    },
)

write_source_files(
    name = "test_one",
    # test the default output of the ts_project
    src = "expected.js_",
    generated = "case_one/a.js",
)

write_source_files(
    name = "test_two",
    # test the default output of the ts_project
    src = "expected.js_",
    generated = "case_two/a.js",
)
