load("@aspect_bazel_lib//lib:write_source_files.bzl", "write_source_files")
load("@bazel_skylib//rules:write_file.bzl", "write_file")
load("//ts:defs.bzl", "ts_project")

write_file(
    name = "gen_src",
    out = "subdir/a.ts",
    content = ["export const a: string = 'hello world';"],
)

ts_project(
    srcs = ["subdir/a.ts"],
    tsconfig = {
        "compilerOptions": {
            "rootDir": "subdir",
        },
    },
)

write_source_files(
    name = "test",
    src = "expected.js_",
    generated = ":a.js",
)
